# image_processor

./: CMakeLists.txt  cmd_parser.cpp  cmd_parser.h  image.cpp  image.h  image_processor.cpp  print_help.cpp  print_help.h  readme.md
file_handling/: exceptions.cpp  exceptions.h  file_working_utilities.cpp  file_working_utilities.h  reader.cpp  reader.h  writer.cpp  writer.h
filters/: all_filters.h  crop.cpp  edge_detection.cpp  gaussian_blur.cpp  image_slic_clustering.cpp  image_slic_clustering.h  matrix_filter.cpp  matrix_filter.h  single_pixel_filter.cpp  slic_crystallize.cpp  slic_crystallize.h
